# send2trash

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGES  CHANGES.rst  LICENSE  MANIFEST.in  README  README.rst  pyproject.toml  setup.cfg  setup.py  test_plat_other.py  tox.ini
.github/workflows/: codeql-analysis.yml  default.yml
modules/: send2trash_osx.c  send2trash_win.c  trash_osx.c  trash_win.c
send2trash/: IFileOperationProgressSink.py  __init__.py  __main__.py  compat.py  exceptions.py  plat_gio.py  plat_osx.py  plat_osx_ctypes.py  plat_osx_pyobjc.py  plat_other.py  plat_win.py  plat_win_legacy.py  plat_win_modern.py  util.py
send2trash/mac/: __init__.py  legacy.py  modern.py
send2trash/win/: IFileOperationProgressSink.py  __init__.py  legacy.py  modern.py
tests/: __init__.py  test_plat_other.py  test_plat_win.py  test_script_main.py
